22/2 multer, middeware admin, crud autos

--- a/src/views/admin/adminAutos.ejs
+++ b/src/views/admin/adminAutos.ejs
@@ -8,7 +8,7 @@
       <br>
       <section class="row">
         <article class="col-12">
-          <a href="/admin/agregarAuto"><button type="button" class="btn btn-success">Agregar</button></a>
+          <a href="/admin/autos/agregarAuto"><button type="button" class="btn btn-success">Agregar</button></a>
         </article>
         <article class="col-12" >
         <table class="table">
@@ -24,15 +24,15 @@
               </tr>
             </thead>
             <tbody>
-              <% getAutos.forEach(auto => { %>
+              <% autos.forEach(auto => { %>
               <tr id="<%= auto.id %>">
                 <td><%= auto.id%> </td>
                 <td><%= auto.marca%></td>
                 <td><%= auto.modelo%> </td>
                 <td><%= auto.anio%> </td>
-                <td><a href="/autos/detalle/<%= auto.id%> "> <ion-icon name="eye-outline"></ion-icon></a></td>
-                <td><a href="/admin/editarAuto/<%= auto.id%> "> <ion-icon name="pencil-outline"></ion-icon></a></td>
-                <form action="/admin/eliminarAuto/<%= auto.id%>?_method=DELETE" method="POST">
+                <td><a href="/autos/<%= auto.id%> "> <ion-icon name="eye-outline"></ion-icon></a></td>
+                <td><a href="/admin/autos/editarAuto/<%= auto.id%> "> <ion-icon name="pencil-outline"></ion-icon></a></td>
+                <form action="/admin/autos/eliminarAuto/<%= auto.id%>?_method=DELETE" method="POST">
                   <td><button type="submit" style="border: none; background: none;"><ion-icon name="trash-outline"></ion-icon></td>
                 </form>
               </tr>
