--- a/src/views/admin/agregarSucursal.ejs
+++ b/src/views/admin/agregarSucursal.ejs
@@ -6,28 +6,25 @@
     <main class="container">
         <h3 class="text-center">Agregar sucursal</h3>
         <div class="container col-md-4">
-            <form class="row g-3" action="/admin/sucursales/create" method="POST">
+            <form class="row g-3" action="/admin/sucursales/create" method="POST" enctype="multipart/form-data">
                 <div class="col-12">
                     <label for="inputName" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="inputName" name="nombre" value="<%= (locals.old && old.nombre) ? old.nombre : '' %>">
-                    <small class="text-danger"><%= (locals.errors  && errors.nombre) ? errors.nombre.msg : "" %></small>
+                    <input type="text" class="form-control" id="inputName" name="nombre">
                 </div>
                 <div class="col-12">
                     <label for="inputAddress" class="form-label">Dirección</label>
-                    <input type="text" class="form-control" id="inputAddress" name="direccion" value="<%= (locals.old && old.direccion) ? old.direccion : '' %>">
-                    <small class="text-danger"><%= (locals.errors  && errors.direccion) ? errors.direccion.msg : "" %></small>
+                    <input type="text" class="form-control" id="inputAddress" name="direccion">
                 </div>
                 <div class="col-12">
                     <label for="inputTel" class="form-label">Teléfono</label>
-                    <input type="tel" class="form-control" id="inputTel" name="telefono" value="<%= (locals.old && old.telefono) ? old.telefono : '' %>">
-                    <small class="text-danger"><%= (locals.errors  && errors.telefono) ? errors.telefono.msg : "" %></small>
+                    <input type="tel" class="form-control" id="inputTel" name="telefono">
                 </div>
                 <!-- Image preview -->
                 <div id="imagePreview"></div>
                 
                 <div class="col-12">
                     <label for="inputFile" class="form-label">Imagen</label>
-                    <input type="file" class="form-control" id="inputFile" name="imagen" onchange="return fileValidation()"/>
+                    <input type="file" class="form-control" id="inputFile" name="imagen"/>
                 </div>
                 <div class="col-12">
                     <button type="submit" class="btn btn-primary">AGREGAR</button>
@@ -35,7 +32,6 @@
             </form>
         </div>
     </main>
-    <script src="/js/imagePreview.js"></script>
     <%- include('../partials/scripts.ejs')  %> 
 </body>
 </html>
