--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -9,11 +9,13 @@
             <form class="row g-3" action="/users/login" method="POST">
                 <div class="col-12">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email">
+                    <input type="email" class="form-control" id="email" name="email" value="<%= locals.old?.email ?? '' %>">
+                    <small class="text-danger"><%= locals.errors?.email?.msg ?? "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="pass" class="form-label">pass</label>
                     <input type="password" class="form-control" id="pass" name="pass">
+                    <small class="text-danger"><%= locals.errors?.pass?.msg ?? "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="recordar">Recordarme</label>
