--- a/src/views/admin/agregarAuto.ejs
+++ b/src/views/admin/agregarAuto.ejs
@@ -37,7 +37,7 @@
                 
                 <div class="col-12">
                     <label for="inputFile" class="form-label">Imagen</label>
-                    <input type="file" class="form-control" id="inputFile" name="imagen" onchange="return fileValidation()"/>
+                    <input type="file" multiple class="form-control" id="inputFile" name="imagen" onchange="return fileValidation()"/>
                 </div>
                 <div class="col-12">
                     <button type="submit" class="btn btn-primary">AGREGAR</button>
