--- a/src/views/autos/autoDetail.ejs
+++ b/src/views/autos/autoDetail.ejs
@@ -10,7 +10,10 @@
         <p>Año: <%= auto.anio %></p>
         <p>Color <%= auto.color %></p>
         <p>Sucursal: <%= sucursal.nombre %></p>
-        <img src="/images/<%- auto.imagen %>" class="card-img-top" style="width: 24rem;" alt="...">
+        <% auto.imagen.forEach(image => { %>
+            <img src="/images/<%- image %>" class="card-img-top" style="width: 24rem;" alt="...">
+        <% }) %>
+        
     </main>
     
     <%- include('../partials/scripts.ejs')  %> 
