--- a/src/views/sucursales/sucursal.ejs
+++ b/src/views/sucursales/sucursal.ejs
@@ -19,7 +19,7 @@
 			<% autos.forEach(auto => { %>
 			<div class="card" style="width: 14rem">
 				<img
-					src="/images/<%= auto.imagen %> "
+					src="/images/<%= auto.imagenes[0].file %> "
 					class="card-img-top"
 					alt="..."
 				/>
