--- a/src/views/autos/autos.ejs
+++ b/src/views/autos/autos.ejs
@@ -10,7 +10,7 @@
 				<% autos.forEach( auto => { %>
 				<div class="card m-2 text-black bg-light" style="width: 16rem">
 					<img
-						src="/images/<%- auto.imagen[0] %>"
+						src="/images/<%- auto.imagenes[0].file %>"
 						class="card-img-top"
 						alt="..."
 					/>
