--- a/src/views/admin/agregarAuto.ejs
+++ b/src/views/admin/agregarAuto.ejs
@@ -9,28 +9,33 @@
             <form class="row g-3" action="/admin/autos/create" method="POST" enctype="multipart/form-data">
                 <div class="col-12">
                     <label for="inputName" class="form-label">Marca</label>
-                    <input type="text" class="form-control" id="inputName" name="marca">
+                    <input type="text" class="form-control" id="inputName" name="marca" value="<%= locals.old?.marca ?? "" %>">
+                    <small class="text-danger" id="errorMarca"><%= locals.errors?.marca ? errors.marca.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="inputAddress" class="form-label">Modelo</label>
-                    <input type="text" class="form-control" id="inputAddress" name="modelo">
+                    <input type="text" class="form-control" id="inputAddress" name="modelo" value="<%= locals.old?.modelo ?? "" %>">
+                    <small class="text-danger" id="errorModelo"><%= locals.errors?.modelo ? errors.modelo.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="inputTel" class="form-label">Año</label>
-                    <input type="number" class="form-control" id="inputTel" name="anio">
+                    <input type="number" class="form-control" id="inputTel" name="anio" value="<%= locals.old?.anio ?? "" %>">
+                    <small class="text-danger" id="errorAnio"><%= locals.errors?.anio ? errors.anio.msg : "" %></small>
                 </div>
                 <div class="col-12">
-                    <label for="inputTel" class="form-label">Sucursal</label>
-                    <select name="sucursal" id="sucursal" class="form-control">
+                    <label for="inputSucursal" class="form-label">Sucursal</label>
+                    <select name="sucursalId" id="sucursal" class="form-control">
                         <option value="" selected hidden>Elige tu sucursal</option>
                         <% sucursales.forEach(({id, nombre}) => { %>
                             <option value="<%= id %>"><%= nombre %></option>
                         <% }) %>
                     </select>
+                    <small class="text-danger" id="errorSucursal"><%= locals.errors?.sucursalId ? errors.sucursalId.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="inputTel" class="form-label">Color</label>
-                    <input type="text" class="form-control" id="inputTel" name="color">
+                    <input type="text" class="form-control" id="inputTel" name="color" value="<%= locals.old?.color ?? "" %>">
+                    <small class="text-danger" id="errorColor"><%= locals.errors?.color ? errors.color.msg : "" %></small>
                 </div>
                 <!-- Image preview -->
                 <div id="imagePreview"></div>
@@ -38,6 +43,7 @@
                 <div class="col-12">
                     <label for="inputFile" class="form-label">Imagen</label>
                     <input type="file" multiple class="form-control" id="inputFile" name="imagen" onchange="return fileValidation()"/>
+                    <small class="text-danger" id="errorImagen"><%= locals.errors?.image ? errors.image.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <button type="submit" class="btn btn-primary">AGREGAR</button>
