--- a/src/views/admin/agregarSucursal.ejs
+++ b/src/views/admin/agregarSucursal.ejs
@@ -9,15 +9,18 @@
             <form class="row g-3" action="/admin/sucursales/create" method="POST" enctype="multipart/form-data">
                 <div class="col-12">
                     <label for="inputName" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="inputName" name="nombre">
+                    <input type="text" class="form-control" id="inputName" name="nombre" value="<%= locals.old?.nombre ?? "" %>">
+                    <small class="text-danger" id="errorNombre"><%= locals.errors?.nombre ? errors.nombre.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="inputAddress" class="form-label">Dirección</label>
-                    <input type="text" class="form-control" id="inputAddress" name="direccion">
+                    <input type="text" class="form-control" id="inputAddress" name="direccion" value="<%= locals.old?.direccion ?? "" %>">
+                    <small class="text-danger" id="errorDireccion"><%= locals.errors?.direccion ? errors.direccion.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="inputTel" class="form-label">Teléfono</label>
-                    <input type="tel" class="form-control" id="inputTel" name="telefono">
+                    <input type="tel" class="form-control" id="inputTel" name="telefono" value="<%= locals.old?.telefono ?? "" %>">
+                    <small class="text-danger" id="errorTelefono"><%= locals.errors?.telefono ? errors.telefono.msg : "" %></small>
                 </div>
                 <!-- Image preview -->
                 <div id="imagePreview"></div>
@@ -26,6 +29,7 @@
                     <label for="inputFile" class="form-label">Imagen</label>
                     <input type="file" class="form-control" id="inputFile" name="imagen"/>
                 </div>
+                <small class="text-danger" id="errorimagen"><%= locals.errors?.imagen ? errors.imagen.msg : "" %></small>
                 <div class="col-12">
                     <button type="submit" class="btn btn-primary">AGREGAR</button>
                 </div>
