--- a/src/views/admin/editarSucursal.ejs
+++ b/src/views/admin/editarSucursal.ejs
@@ -9,17 +9,18 @@
             <form class="row g-3" action="/admin/sucursales/editar/<%= sucursal.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                 <div class="col-12">
                     <label for="inputName" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="inputName" name="nombre" value="<%= sucursal.nombre %>">
-                    
+                    <input type="text" class="form-control" id="inputName" name="nombre" value="<%= locals.old?.nombre ?? sucursal.nombre %>">
+                    <small class="text-danger" id="errorMarca"><%= locals.errors?.nombre ? errors.nombre.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="inputAddress" class="form-label">Dirección</label>
-                    <input type="text" class="form-control" id="inputAddress" name="direccion" value="<%= sucursal.direccion %>">
-                    
+                    <input type="text" class="form-control" id="inputAddress" name="direccion" value="<%= locals.old?.direccion ?? sucursal.direccion %>">
+                    <small class="text-danger" id="errorMarca"><%= locals.errors?.direccion ? errors.direccion.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="inputTel" class="form-label">Teléfono</label>
-                    <input type="tel" class="form-control" id="inputTel" name="telefono" value="<%= sucursal.telefono %>">
+                    <input type="tel" class="form-control" id="inputTel" name="telefono" value="<%= locals.old?.telefono ?? sucursal.telefono %>">
+                    <small class="text-danger" id="errorMarca"><%= locals.errors?.telefono ? errors.telefono.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <figure class="text-center">
@@ -28,6 +29,7 @@
                     
                     <label for="inputFile" class="form-label">Imagen</label>
                     <input type="file" class="form-control" name="imagen" id="inputFile">
+                    <small class="text-danger" id="errorMarca"><%= locals.errors?.imagen ? errors.imagen.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <button type="submit" class="btn btn-success">EDITAR</button>
