--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -9,23 +9,28 @@
             <form class="row g-3" action="/users/register" method="POST">
                 <div class="col-12">
                     <label for="nombre" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="nombre" name="nombre">
+                    <input type="text" class="form-control" id="nombre" name="nombre" value="<%= locals.old?.nombre ?? ""%>">
+                    <small class="text-danger"><%= locals.errors?.nombre?.msg ?? "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="apellido" class="form-label">Apellido</label>
-                    <input type="text" class="form-control" id="apellido" name="apellido">
+                    <input type="text" class="form-control" id="apellido" name="apellido" value="<%= locals.old?.apellido ?? ""%>">
+                    <small class="text-danger"><%= locals.errors?.apellido?.msg ?? "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email">
+                    <input type="email" class="form-control" id="email" name="email" value="<%= locals.old?.email ?? ""%>">
+                    <small class="text-danger"><%= locals.errors?.email?.msg ?? "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="pass" class="form-label">pass</label>
                     <input type="password" class="form-control" id="pass" name="pass">
+                    <small class="text-danger"><%= locals.errors?.pass?.msg ?? "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="pass2" class="form-label">pass2</label>
                     <input type="password" class="form-control" id="pass2" name="pass2">
+                    <small class="text-danger"><%= locals.errors?.pass2?.msg ?? "" %></small>
                 </div>
                 <div class="col-12">
                     <button type="submit" class="btn btn-primary">REGISTER</button>
