--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
-    <%- include('../partials/head.ejs')  %> 
+    <%- include('../partials/head.ejs')  %>
+    <script src="/javascript/formValidators/loginValidator.js"></script>
 <body>
     <%- include('../partials/header.ejs')  %> 
     <main class="container">
         <h3 class="text-center">Login</h3>
         <div class="container col-md-4">
-            <form class="row g-3" action="/users/login" method="POST">
+            <form class="row g-3" id="formLogin" action="/users/login" method="POST">
                 <div class="col-12">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" value="<%= locals.old?.email ?? '' %>">
-                    <small class="text-danger"><%= locals.errors?.email?.msg ?? "" %></small>
+                    <input type="text" class="form-control" id="email" name="email" value="<%= locals.old?.email ?? '' %>">
+                    <small class="text-danger" id="errorEmail"><%= locals.errors?.email?.msg ?? "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="pass" class="form-label">pass</label>
                     <input type="password" class="form-control" id="pass" name="pass">
-                    <small class="text-danger"><%= locals.errors?.pass?.msg ?? "" %></small>
+                    <small class="text-danger" id="errorPass"><%= locals.errors?.pass?.msg ?? "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="recordar">Recordarme</label>
                     <input type="checkbox" name="recordar" id="recordar">
                 </div>
+                <small class="text-danger" id="errorForm"></small>
                 <div class="col-12">
                     <button type="submit" class="btn btn-primary">LOGIN</button>
                 </div>
