--- a/src/views/admin/agregarAuto.ejs
+++ b/src/views/admin/agregarAuto.ejs
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-    <%- include('../partials/head.ejs')  %> 
+    <%- include('../partials/head.ejs')  %>
+    <script src="/javascript/formValidators/autoValidator.js"></script> 
 <body>
     <%- include('../partials/headerAdmin.ejs')  %> 
     <main class="container">
         <h3 class="text-center">Agregar Auto</h3>
         <div class="container col-md-4">
-            <form class="row g-3" action="/admin/autos/create" method="POST" enctype="multipart/form-data">
+            <form class="row g-3" id="form" action="/admin/autos/create" method="POST" enctype="multipart/form-data">
                 <div class="col-12">
                     <label for="inputName" class="form-label">Marca</label>
-                    <input type="text" class="form-control" id="inputName" name="marca" value="<%= locals.old?.marca ?? "" %>">
+                    <input type="text" class="form-control" id="marca" name="marca" value="<%= locals.old?.marca ?? "" %>">
                     <small class="text-danger" id="errorMarca"><%= locals.errors?.marca ? errors.marca.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="inputAddress" class="form-label">Modelo</label>
-                    <input type="text" class="form-control" id="inputAddress" name="modelo" value="<%= locals.old?.modelo ?? "" %>">
+                    <input type="text" class="form-control" id="modelo" name="modelo" value="<%= locals.old?.modelo ?? "" %>">
                     <small class="text-danger" id="errorModelo"><%= locals.errors?.modelo ? errors.modelo.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="inputTel" class="form-label">Año</label>
-                    <input type="number" class="form-control" id="inputTel" name="anio" value="<%= locals.old?.anio ?? "" %>">
+                    <input type="number" class="form-control" id="anio" name="anio" value="<%= locals.old?.anio ?? "" %>">
                     <small class="text-danger" id="errorAnio"><%= locals.errors?.anio ? errors.anio.msg : "" %></small>
                 </div>
                 <div class="col-12">
@@ -34,7 +35,7 @@
                 </div>
                 <div class="col-12">
                     <label for="inputTel" class="form-label">Color</label>
-                    <input type="text" class="form-control" id="inputTel" name="color" value="<%= locals.old?.color ?? "" %>">
+                    <input type="text" class="form-control" id="color" name="color" value="<%= locals.old?.color ?? "" %>">
                     <small class="text-danger" id="errorColor"><%= locals.errors?.color ? errors.color.msg : "" %></small>
                 </div>
                 <!-- Image preview -->
@@ -42,9 +43,10 @@
                 
                 <div class="col-12">
                     <label for="inputFile" class="form-label">Imagen</label>
-                    <input type="file" multiple class="form-control" id="inputFile" name="imagen" onchange="return fileValidation()"/>
+                    <input type="file" multiple class="form-control" id="inputFile" name="imagen"/>
                     <small class="text-danger" id="errorImagen"><%= locals.errors?.image ? errors.image.msg : "" %></small>
                 </div>
+                <small class="text-danger" id="errorForm"></small>
                 <div class="col-12">
                     <button type="submit" class="btn btn-primary">AGREGAR</button>
                 </div>
