--- a/src/views/admin/editarSucursal.ejs
+++ b/src/views/admin/editarSucursal.ejs
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-    <%- include('../partials/head.ejs')  %> 
+    <%- include('../partials/head.ejs')  %>
+    <script src="/javascript/formValidators/sucursalValidator.js"></script>
 <body>
     <%- include('../partials/headerAdmin.ejs')  %> 
     <main class="container">
         <h3 class="text-center">Editar sucursal <%= sucursal.nombre %> </h3>
         <div class="container col-md-4">
-            <form class="row g-3" action="/admin/sucursales/editar/<%= sucursal.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+            <form class="row g-3" id="form" action="/admin/sucursales/editar/<%= sucursal.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
                 <div class="col-12">
                     <label for="inputName" class="form-label">Nombre</label>
                     <input type="text" class="form-control" id="inputName" name="nombre" value="<%= locals.old?.nombre ?? sucursal.nombre %>">
-                    <small class="text-danger" id="errorMarca"><%= locals.errors?.nombre ? errors.nombre.msg : "" %></small>
+                    <small class="text-danger" id="errorNombre"><%= locals.errors?.nombre ? errors.nombre.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="inputAddress" class="form-label">Dirección</label>
                     <input type="text" class="form-control" id="inputAddress" name="direccion" value="<%= locals.old?.direccion ?? sucursal.direccion %>">
-                    <small class="text-danger" id="errorMarca"><%= locals.errors?.direccion ? errors.direccion.msg : "" %></small>
+                    <small class="text-danger" id="errorDireccion"><%= locals.errors?.direccion ? errors.direccion.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <label for="inputTel" class="form-label">Teléfono</label>
                     <input type="tel" class="form-control" id="inputTel" name="telefono" value="<%= locals.old?.telefono ?? sucursal.telefono %>">
-                    <small class="text-danger" id="errorMarca"><%= locals.errors?.telefono ? errors.telefono.msg : "" %></small>
+                    <small class="text-danger" id="errorTelefono"><%= locals.errors?.telefono ? errors.telefono.msg : "" %></small>
                 </div>
                 <div class="col-12">
                     <figure class="text-center">
@@ -28,9 +29,10 @@
                     </figure>
                     
                     <label for="inputFile" class="form-label">Imagen</label>
-                    <input type="file" class="form-control" name="imagen" id="inputFile">
-                    <small class="text-danger" id="errorMarca"><%= locals.errors?.imagen ? errors.imagen.msg : "" %></small>
+                    <input type="file" class="form-control" name="imagen" id="imagen">
+                    <small class="text-danger" id="errorImagen"><%= locals.errors?.imagen ? errors.imagen.msg : "" %></small>
                 </div>
+                <small class="text-danger" id="errorForm"></small>
                 <div class="col-12">
                     <button type="submit" class="btn btn-success">EDITAR</button>
                 </div>
