Image preview in forms

--- a/src/views/admin/agregarAuto.ejs
+++ b/src/views/admin/agregarAuto.ejs
@@ -39,7 +39,8 @@
                     <small class="text-danger" id="errorColor"><%= locals.errors?.color ? errors.color.msg : "" %></small>
                 </div>
                 <!-- Image preview -->
-                <div id="imagePreview"></div>
+                <div id="imagePreview" class="container d-flex flex-wrap justify-content-center" style="gap:10px">
+                </div>
                 
                 <div class="col-12">
                     <label for="inputFile" class="form-label">Imagen</label>
